--- a/style.css
+++ b/style.css
@@ -3,12 +3,20 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.6;
     color: #333;
-    background: url('background.jpeg')no-repeat center center fixed;
+    background: url('images/background.jpeg')no-repeat center center fixed;
     background-size: cover;
 /* covering the entire background*/
     margin: 0;
     padding: 0;
 }
+/*hero section with backgroung image
+.about{
+    height: 100vh;
+    background: url(images/about.jpeg)no-repeat center center/cover;
+    justify-content: center;
+    align-items: center;
+    text-decoration-color: antiquewhite;
+}**/
 *{
     margin: 0;
     padding: 0;
@@ -53,6 +61,7 @@ nav ul li a:hover{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-decoration: dotted;
 }
 .hero-content{
     text-align: center;
@@ -193,4 +202,16 @@ footer{
 }
 .hero-content{
     animation: fadeln 2s ease-in-out;
+}
+.back-home-btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+.back-home-btn:hover {
+    background-color: #555;
 }
